fix: support configuration cache
Co-authored-by: Codex <codex@openai.com>